# matrixcpp

./: .gitignore  CMakeLists.txt  README.md
include/arithmetic/: arithmetic.hpp
include/matrix/: base.hpp  decompositions.hpp  dynamic.hpp  indexing.hpp  matrix.hpp  metrics.hpp  operators.hpp  products.hpp  static.hpp  string_representation.hpp
include/sabai/: base.hpp  decompositions.hpp  dynamic.hpp  indexing.hpp  metrics.hpp  operators.hpp  products.hpp  sabai.hpp  static.hpp  string_representation.hpp
src/: dynamic.cpp  main.cpp
test/: test_arithmetic.cpp  test_base.cpp  test_decompositions.cpp  test_dynamic.cpp  test_indexing.cpp  test_matrix.cpp  test_metrics.cpp  test_operators.cpp  test_products.cpp  test_sabai.cpp  test_static.cpp  test_string_representation.cpp
